Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidOperator.ru
/? Error Léxico, salida: operador inváldio
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 4 | COLUMNA 2 | ERROR EN LA COMPARACIÓN: OPERADOR DE COMPARACIÓN NO VALIDO &
&